--- a/scss/style.scss
+++ b/scss/style.scss
@@ -186,7 +186,7 @@ div.ribbon-wrapper{
 	text-align: center;
 }
 
-//slides
+//commun a pluseirus slides
 section.slide{
 	width: 100%;
 	padding-top: 42px;
@@ -222,6 +222,132 @@ section.slide div.slide-inner{
 		width: 100%;
 		padding-left: 10px;
 		padding-right: 10px;
+	}
+}
+section.valeur{
+	h1{
+		@include font-size(60);
+		text-align: center;
+		margin-bottom: 30px;
+		
+		@include breakpoint(mobile){
+			@include font-size(40);
+			text-align: left;
+		}
+	}
+	//retour à la ligne manuel
+	@include breakpoint(mobile){
+		h1 span{
+			display: block;
+		}
+	}
+	
+	blockquote{
+		display: inline-block;
+		@include ribbon(#f4f4f4);
+		@include font-size(22);
+		margin: auto;
+		padding: 5px 100px;
+		font-weight: 700;
+		color: $couleur-fond-contraste;
+		text-align: center;
+		
+		@include breakpoint(mobile){
+			padding: 5px 7%;
+		}
+	}
+	cite{
+		display: block;
+		font-weight: 300;
+		font-style: normal;
+		@include font-size(20);
+		text-align: right;
+	}
+	
+	ul.prop-links{
+		margin: 50px auto 0;
+		list-style: none;
+		text-align: center;
+		font-size: 0;
+	}
+	ul.prop-links li{
+		display: inline-block;
+		width: 35%;
+		margin-right: 15px;
+		margin-left: 15px;
+		margin-bottom: 30px;
+		line-height: 1;
+		
+		@include breakpoint(mobile){
+			display: block;
+			width: 100%;
+			margin-right: 0;
+			margin-left: 0;
+		}
+	}
+	ul.prop-links div.wrap{
+		display: table;
+		width: 100%;
+		position: relative;
+		@include transition();
+		
+		&:after{
+			content: attr(data-num);
+			position: absolute;
+			right: -7px;
+			bottom: -30px;
+			@include font-size(110);
+			font-family: $heading-font-family;
+			font-weight: 700;
+			z-index: 1;
+			@include transition();
+		}
+		&:hover:after{
+			right: 5px;
+		}
+	}
+	ul.prop-links a{
+		position: relative;
+		display: table-cell;
+		vertical-align: middle;
+		padding: 0 10px;
+		height: 150px;
+		text-align: left;
+		text-decoration: none;
+		text-transform: uppercase;
+		font-family: $heading-font-family;
+		@include font-size(22);
+		font-weight: 700;
+		line-height: 1.3em;
+		z-index: 10;
+		
+		@include breakpoint(tablet){
+			@include font-size(20);
+			line-height: 1.2em;
+		}
+	}
+	
+	
+	&:after{
+		color: rgba(255,255,255,.4);
+		position: absolute;
+		font-family: $heading-font-family;
+		font-weight: 700;
+		z--index: -1;
+		
+		@include breakpoint(desktop){
+			@include font-size(600);
+			bottom: -150px;
+			right: -20px;
+		}
+		@include breakpoint(tablet){
+			@include font-size(400);
+			bottom: -150px;
+			right: -20px;
+		}
+		@include breakpoint(mobile){
+			display: none;
+		}
 	}
 }
 
@@ -291,136 +417,19 @@ section.slide div.slide-inner{
 	position: relative;
 	overflow: hidden;
 
-	h1{
-		@include font-size(60);
-		text-align: center;
-		margin-bottom: 30px;
-		
-		@include breakpoint(mobile){
-			@include font-size(40);
-			text-align: left;
-		}
-	}
-	//retour à la ligne manuel
-	@include breakpoint(mobile){
-		h1 span{
-			display: block;
-		}
-	}
-	
-	blockquote{
-		display: inline-block;
-		@include ribbon(#f4f4f4);
-		@include font-size(22);
-		margin: auto;
-		padding: 5px 100px;
-		font-weight: 700;
-		color: $couleur-fond-contraste;
-		text-align: center;
-		
-		@include breakpoint(mobile){
-			padding: 5px 7%;
-		}
-	}
-	cite{
-		display: block;
-		font-weight: 300;
-		font-style: normal;
-		@include font-size(20);
-		text-align: right;
-	}
-	
-	ul.prop-links{
-		margin: 50px auto 0;
-		list-style: none;
-		text-align: center;
-		font-size: 0;
-	}
-	ul.prop-links li{
-		display: inline-block;
-		width: 35%;
-		margin-right: 15px;
-		margin-left: 15px;
-		margin-bottom: 30px;
-		line-height: 1;
-		
-		@include breakpoint(mobile){
-			display: block;
-			width: 100%;
-			margin-right: 0;
-			margin-left: 0;
-		}
-	}
 	ul.prop-links div.wrap{
-		display: table;
-		width: 100%;
-		position: relative;
 		background: #8e2011;
-		@include transition();
-		
 		&:hover{
 			background: darken(#8e2011, 5);
 		}
 		
 		&:after{
-			content: attr(data-num);
-			position: absolute;
-			right: -7px;
-			bottom: -30px;
-			@include font-size(110);
 			color: $couleur-fond-entrepreneur;
-			font-family: $heading-font-family;
-			font-weight: 700;
-			z-index: 1;
-			@include transition();
-		}
-		&:hover:after{
-			right: 5px;
 		}
 	}
-	ul.prop-links a{
-		position: relative;
-		display: table-cell;
-		vertical-align: middle;
-		padding: 0 10px;
-		height: 150px;
-		text-align: left;
-		text-decoration: none;
-		text-transform: uppercase;
-		font-family: $heading-font-family;
-		@include font-size(22);
-		font-weight: 700;
-		line-height: 1.3em;
-		z-index: 10;
-		
-		@include breakpoint(tablet){
-			@include font-size(20);
-			line-height: 1.2em;
-		}
-	}
-	
 	
 	&:after{
 		content: "1";
-		position: absolute;
-		font-family: $heading-font-family;
-		font-weight: 700;
-		color: #e0867a;
-		z--index: -1;
-	
-		@include breakpoint(desktop){
-			@include font-size(600);
-			bottom: -150px;
-			right: -20px;
-		}
-		@include breakpoint(tablet){
-			@include font-size(400);
-			bottom: -150px;
-			right: -20px;
-		}
-		@include breakpoint(mobile){
-			display: none;
-		}
 	}
 }
 
@@ -429,4 +438,25 @@ section.slide div.slide-inner{
 }
 #prop1{
 	background: $couleur-fond-entrepreneur;
+}
+
+#transversalite{
+	background: $couleur-fond-transversalite;
+	position: relative;
+	overflow: hidden;
+
+	ul.prop-links div.wrap{
+		background: #1331a1;
+		&:hover{
+			background: darken(#1331a1, 5);
+		}
+		
+		&:after{
+			color: $couleur-fond-transversalite;
+		}
+	}
+	
+	&:after{
+		content: "2";
+	}
 }
