--- a/css/style.css
+++ b/css/style.css
@@ -790,8 +790,13 @@ div.content {
     border-top: 1px solid #bbbbbb;
   }
 }
+/* line 139, ../scss/style.scss */
+#menu li:hover a, #menu li a:focus, #menu li.active a {
+  background: #f4f4f4;
+  color: #252525;
+}
 
-/* line 137, ../scss/style.scss */
+/* line 144, ../scss/style.scss */
 #menu a {
   display: block;
   text-decoration: none;
@@ -804,18 +809,13 @@ div.content {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 146, ../scss/style.scss */
-#menu a:hover, #menu a:focus {
-  background: #f4f4f4;
-  color: #252525;
-}
 
-/* line 185, ../scss/style.scss */
+/* line 186, ../scss/style.scss */
 div.ribbon-wrapper {
   text-align: center;
 }
 
-/* line 190, ../scss/style.scss */
+/* line 191, ../scss/style.scss */
 section.slide {
   width: 100%;
   padding-top: 42px;
@@ -829,37 +829,37 @@ section.slide {
   background-repeat: no-repeat;
 }
 @media only screen and (min-height: 700px) {
-  /* line 190, ../scss/style.scss */
+  /* line 191, ../scss/style.scss */
   section.slide {
     min-height: 700px;
   }
 }
 @media only screen and (min-height: 500px) and (max-height: 699px) {
-  /* line 190, ../scss/style.scss */
+  /* line 191, ../scss/style.scss */
   section.slide {
     min-height: 500px;
   }
 }
 @media only screen and (max-height: 499px) {
-  /* line 190, ../scss/style.scss */
+  /* line 191, ../scss/style.scss */
   section.slide {
     min-height: 300px;
   }
 }
 
-/* line 209, ../scss/style.scss */
+/* line 210, ../scss/style.scss */
 section.slide div.slide-inner {
   margin: auto;
   padding-top: 40px;
 }
 @media only screen and (min-width: 960px) {
-  /* line 209, ../scss/style.scss */
+  /* line 210, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 960px;
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 209, ../scss/style.scss */
+  /* line 210, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -867,7 +867,7 @@ section.slide div.slide-inner {
   }
 }
 @media (max-width: 767px) {
-  /* line 209, ../scss/style.scss */
+  /* line 210, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -875,7 +875,7 @@ section.slide div.slide-inner {
   }
 }
 
-/* line 228, ../scss/style.scss */
+/* line 229, ../scss/style.scss */
 section.valeur h1 {
   font-size: 60px;
   font-size: 6rem;
@@ -883,7 +883,7 @@ section.valeur h1 {
   margin-bottom: 30px;
 }
 @media (max-width: 767px) {
-  /* line 228, ../scss/style.scss */
+  /* line 229, ../scss/style.scss */
   section.valeur h1 {
     font-size: 40px;
     font-size: 4rem;
@@ -891,12 +891,12 @@ section.valeur h1 {
   }
 }
 @media (max-width: 767px) {
-  /* line 240, ../scss/style.scss */
+  /* line 241, ../scss/style.scss */
   section.valeur h1 span {
     display: block;
   }
 }
-/* line 245, ../scss/style.scss */
+/* line 246, ../scss/style.scss */
 section.valeur blockquote {
   display: inline-block;
   position: relative;
@@ -909,7 +909,7 @@ section.valeur blockquote {
   color: #252525;
   text-align: center;
 }
-/* line 158, ../scss/style.scss */
+/* line 159, ../scss/style.scss */
 section.valeur blockquote:before, section.valeur blockquote:after {
   content: "";
   position: absolute;
@@ -918,7 +918,7 @@ section.valeur blockquote:before, section.valeur blockquote:after {
   border-top-width: 0;
   border-bottom-width: 15px;
 }
-/* line 166, ../scss/style.scss */
+/* line 167, ../scss/style.scss */
 section.valeur blockquote:before {
   left: 0;
   bottom: -15px;
@@ -928,7 +928,7 @@ section.valeur blockquote:before {
   border-left-width: 0;
   border-right-width: 50px;
 }
-/* line 175, ../scss/style.scss */
+/* line 176, ../scss/style.scss */
 section.valeur blockquote:after {
   right: 0;
   bottom: -15px;
@@ -939,12 +939,12 @@ section.valeur blockquote:after {
   border-left-width: 50px;
 }
 @media (max-width: 767px) {
-  /* line 245, ../scss/style.scss */
+  /* line 246, ../scss/style.scss */
   section.valeur blockquote {
     padding: 5px 7%;
   }
 }
-/* line 259, ../scss/style.scss */
+/* line 260, ../scss/style.scss */
 section.valeur cite {
   display: block;
   font-weight: 300;
@@ -953,14 +953,14 @@ section.valeur cite {
   font-size: 2rem;
   text-align: right;
 }
-/* line 267, ../scss/style.scss */
+/* line 268, ../scss/style.scss */
 section.valeur ul.prop-links {
   margin: 50px auto 0;
   list-style: none;
   text-align: center;
   font-size: 0;
 }
-/* line 273, ../scss/style.scss */
+/* line 274, ../scss/style.scss */
 section.valeur ul.prop-links li {
   display: inline-block;
   width: 35%;
@@ -970,7 +970,7 @@ section.valeur ul.prop-links li {
   line-height: 1;
 }
 @media (max-width: 767px) {
-  /* line 273, ../scss/style.scss */
+  /* line 274, ../scss/style.scss */
   section.valeur ul.prop-links li {
     display: block;
     width: 100%;
@@ -978,7 +978,7 @@ section.valeur ul.prop-links li {
     margin-left: 0;
   }
 }
-/* line 288, ../scss/style.scss */
+/* line 289, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap {
   display: table;
   width: 100%;
@@ -988,7 +988,7 @@ section.valeur ul.prop-links div.wrap {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 294, ../scss/style.scss */
+/* line 295, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:after {
   content: attr(data-num);
   position: absolute;
@@ -1004,11 +1004,11 @@ section.valeur ul.prop-links div.wrap:after {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 305, ../scss/style.scss */
+/* line 306, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:hover:after {
   right: 5px;
 }
-/* line 309, ../scss/style.scss */
+/* line 310, ../scss/style.scss */
 section.valeur ul.prop-links a {
   position: relative;
   display: table-cell;
@@ -1026,14 +1026,14 @@ section.valeur ul.prop-links a {
   z-index: 10;
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 309, ../scss/style.scss */
+  /* line 310, ../scss/style.scss */
   section.valeur ul.prop-links a {
     font-size: 20px;
     font-size: 2rem;
     line-height: 1.2em;
   }
 }
-/* line 331, ../scss/style.scss */
+/* line 332, ../scss/style.scss */
 section.valeur:after {
   color: rgba(255, 255, 255, 0.4);
   position: absolute;
@@ -1042,7 +1042,7 @@ section.valeur:after {
   z--index: -1;
 }
 @media only screen and (min-width: 960px) {
-  /* line 331, ../scss/style.scss */
+  /* line 332, ../scss/style.scss */
   section.valeur:after {
     font-size: 600px;
     font-size: 60rem;
@@ -1051,7 +1051,7 @@ section.valeur:after {
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 331, ../scss/style.scss */
+  /* line 332, ../scss/style.scss */
   section.valeur:after {
     font-size: 400px;
     font-size: 40rem;
@@ -1060,42 +1060,42 @@ section.valeur:after {
   }
 }
 @media (max-width: 767px) {
-  /* line 331, ../scss/style.scss */
+  /* line 332, ../scss/style.scss */
   section.valeur:after {
     display: none;
   }
 }
 
-/* line 355, ../scss/style.scss */
+/* line 356, ../scss/style.scss */
 #home {
   background-image: url("../img/home.jpg");
   color: #3f5049;
 }
-/* line 359, ../scss/style.scss */
+/* line 360, ../scss/style.scss */
 #home h1 {
   margin-bottom: 0;
 }
 @media (max-width: 767px) {
-  /* line 359, ../scss/style.scss */
+  /* line 360, ../scss/style.scss */
   #home h1 {
     font-size: 25px;
     font-size: 2.5rem;
   }
 }
-/* line 366, ../scss/style.scss */
+/* line 367, ../scss/style.scss */
 #home h2 {
   font-weight: 400;
   margin-bottom: 50px;
 }
 @media (max-width: 767px) {
-  /* line 366, ../scss/style.scss */
+  /* line 367, ../scss/style.scss */
   #home h2 {
     font-size: 20px;
     font-size: 2rem;
     margin-bottom: 30px;
   }
 }
-/* line 375, ../scss/style.scss */
+/* line 376, ../scss/style.scss */
 #home strong {
   display: block;
   margin: auto;
@@ -1104,13 +1104,13 @@ section.valeur:after {
   font-size: 2.2rem;
 }
 @media (max-width: 767px) {
-  /* line 375, ../scss/style.scss */
+  /* line 376, ../scss/style.scss */
   #home strong {
     font-size: 18px;
     font-size: 1.8rem;
   }
 }
-/* line 386, ../scss/style.scss */
+/* line 387, ../scss/style.scss */
 #home a.download {
   display: block;
   text-align: center;
@@ -1128,7 +1128,7 @@ section.valeur:after {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 158, ../scss/style.scss */
+/* line 159, ../scss/style.scss */
 #home a.download:before, #home a.download:after {
   content: "";
   position: absolute;
@@ -1137,7 +1137,7 @@ section.valeur:after {
   border-top-width: 0;
   border-bottom-width: 15px;
 }
-/* line 166, ../scss/style.scss */
+/* line 167, ../scss/style.scss */
 #home a.download:before {
   left: 0;
   bottom: -15px;
@@ -1147,7 +1147,7 @@ section.valeur:after {
   border-left-width: 0;
   border-right-width: 50px;
 }
-/* line 175, ../scss/style.scss */
+/* line 176, ../scss/style.scss */
 #home a.download:after {
   right: 0;
   bottom: -15px;
@@ -1157,78 +1157,78 @@ section.valeur:after {
   border-right-width: 0;
   border-left-width: 50px;
 }
-/* line 399, ../scss/style.scss */
+/* line 400, ../scss/style.scss */
 #home a.download:hover, #home a.download:focus {
   background: #485b53;
 }
 
-/* line 404, ../scss/style.scss */
+/* line 405, ../scss/style.scss */
 #pourquoi {
   background: #252525;
 }
-/* line 407, ../scss/style.scss */
+/* line 408, ../scss/style.scss */
 #pourquoi h1 span {
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 407, ../scss/style.scss */
+  /* line 408, ../scss/style.scss */
   #pourquoi h1 span {
     display: block;
   }
 }
 
-/* line 415, ../scss/style.scss */
+/* line 416, ../scss/style.scss */
 #entrepreneur {
   background: #cb3521;
   position: relative;
   overflow: hidden;
 }
-/* line 420, ../scss/style.scss */
+/* line 421, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap {
   background: #8e2011;
 }
-/* line 422, ../scss/style.scss */
+/* line 423, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:hover {
   background: #771b0e;
 }
-/* line 426, ../scss/style.scss */
+/* line 427, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:after {
   color: #cb3521;
 }
-/* line 431, ../scss/style.scss */
+/* line 432, ../scss/style.scss */
 #entrepreneur:after {
   content: "1";
 }
 
-/* line 436, ../scss/style.scss */
+/* line 437, ../scss/style.scss */
 #prop1-image {
   background-image: url("../img/entrepreneuretudiant.jpg");
 }
 
-/* line 439, ../scss/style.scss */
+/* line 440, ../scss/style.scss */
 #prop1 {
   background: #cb3521;
 }
 
-/* line 443, ../scss/style.scss */
+/* line 444, ../scss/style.scss */
 #transversalite {
   background: #2145cb;
   position: relative;
   overflow: hidden;
 }
-/* line 448, ../scss/style.scss */
+/* line 449, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap {
   background: #1331a1;
 }
-/* line 450, ../scss/style.scss */
+/* line 451, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:hover {
   background: #102a8a;
 }
-/* line 454, ../scss/style.scss */
+/* line 455, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:after {
   color: #2145cb;
 }
-/* line 459, ../scss/style.scss */
+/* line 460, ../scss/style.scss */
 #transversalite:after {
   content: "2";
 }
