Masquage des images plein pot pour mobiles

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,7 +9,7 @@ $couleur-fond-corporate: #ded4cc;
 $couleur-texte-corporate: #3f5049;
 $couleur-fond-entrepreneur: #cb3521;
 $couleur-fond-transversalite: #2145cb;
-$couleur-fond-social: #ce2c9a;
+$couleur-fond-ouverture: #ce2c9a;
 $couleur-fond-contraste: #252525;
 
 $default-transition-function: ease-in;
