--- a/css/style.css
+++ b/css/style.css
@@ -820,13 +820,6 @@ section.slide {
   width: 100%;
   padding-top: 42px;
   padding-bottom: 20px;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
 }
 @media only screen and (min-height: 700px) {
   /* line 191, ../scss/style.scss */
@@ -847,19 +840,45 @@ section.slide {
   }
 }
 
-/* line 210, ../scss/style.scss */
+/* line 206, ../scss/style.scss */
+section.slide.image {
+  position: relative;
+}
+@media (max-width: 767px) {
+  /* line 206, ../scss/style.scss */
+  section.slide.image {
+    display: none;
+  }
+}
+/* line 213, ../scss/style.scss */
+section.slide.image > div {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+/* line 225, ../scss/style.scss */
 section.slide div.slide-inner {
   margin: auto;
   padding-top: 40px;
 }
 @media only screen and (min-width: 960px) {
-  /* line 210, ../scss/style.scss */
+  /* line 225, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 960px;
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 210, ../scss/style.scss */
+  /* line 225, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -867,7 +886,7 @@ section.slide div.slide-inner {
   }
 }
 @media (max-width: 767px) {
-  /* line 210, ../scss/style.scss */
+  /* line 225, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -875,7 +894,7 @@ section.slide div.slide-inner {
   }
 }
 
-/* line 229, ../scss/style.scss */
+/* line 244, ../scss/style.scss */
 section.valeur h1 {
   font-size: 60px;
   font-size: 6rem;
@@ -883,7 +902,7 @@ section.valeur h1 {
   margin-bottom: 30px;
 }
 @media (max-width: 767px) {
-  /* line 229, ../scss/style.scss */
+  /* line 244, ../scss/style.scss */
   section.valeur h1 {
     font-size: 40px;
     font-size: 4rem;
@@ -891,18 +910,18 @@ section.valeur h1 {
   }
 }
 @media (max-width: 767px) {
-  /* line 241, ../scss/style.scss */
+  /* line 256, ../scss/style.scss */
   section.valeur h1 span {
     display: block;
   }
 }
-/* line 246, ../scss/style.scss */
+/* line 261, ../scss/style.scss */
 section.valeur blockquote {
   display: inline-block;
   position: relative;
   background: #f4f4f4;
-  font-size: 22px;
-  font-size: 2.2rem;
+  font-size: 20px;
+  font-size: 2rem;
   margin: auto;
   padding: 5px 100px;
   font-weight: 700;
@@ -939,28 +958,28 @@ section.valeur blockquote:after {
   border-left-width: 50px;
 }
 @media (max-width: 767px) {
-  /* line 246, ../scss/style.scss */
+  /* line 261, ../scss/style.scss */
   section.valeur blockquote {
     padding: 5px 7%;
   }
 }
-/* line 260, ../scss/style.scss */
+/* line 275, ../scss/style.scss */
 section.valeur cite {
   display: block;
   font-weight: 300;
   font-style: normal;
-  font-size: 20px;
-  font-size: 2rem;
+  font-size: 18px;
+  font-size: 1.8rem;
   text-align: right;
 }
-/* line 268, ../scss/style.scss */
+/* line 283, ../scss/style.scss */
 section.valeur ul.prop-links {
   margin: 50px auto 0;
   list-style: none;
   text-align: center;
   font-size: 0;
 }
-/* line 274, ../scss/style.scss */
+/* line 289, ../scss/style.scss */
 section.valeur ul.prop-links li {
   display: inline-block;
   width: 35%;
@@ -970,7 +989,7 @@ section.valeur ul.prop-links li {
   line-height: 1;
 }
 @media (max-width: 767px) {
-  /* line 274, ../scss/style.scss */
+  /* line 289, ../scss/style.scss */
   section.valeur ul.prop-links li {
     display: block;
     width: 100%;
@@ -978,7 +997,7 @@ section.valeur ul.prop-links li {
     margin-left: 0;
   }
 }
-/* line 289, ../scss/style.scss */
+/* line 304, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap {
   display: table;
   width: 100%;
@@ -988,7 +1007,7 @@ section.valeur ul.prop-links div.wrap {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 295, ../scss/style.scss */
+/* line 310, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:after {
   content: attr(data-num);
   position: absolute;
@@ -1004,11 +1023,11 @@ section.valeur ul.prop-links div.wrap:after {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 306, ../scss/style.scss */
+/* line 321, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:hover:after {
   right: 5px;
 }
-/* line 310, ../scss/style.scss */
+/* line 325, ../scss/style.scss */
 section.valeur ul.prop-links a {
   position: relative;
   display: table-cell;
@@ -1019,21 +1038,26 @@ section.valeur ul.prop-links a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: "Josefin Slab", Trebuchet, Helvetica, Arial;
-  font-size: 22px;
-  font-size: 2.2rem;
+  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 1.3em;
   z-index: 10;
 }
+/* line 340, ../scss/style.scss */
+section.valeur ul.prop-links a.long {
+  font-size: 18px;
+  font-size: 1.8rem;
+}
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 310, ../scss/style.scss */
+  /* line 325, ../scss/style.scss */
   section.valeur ul.prop-links a {
     font-size: 20px;
     font-size: 2rem;
     line-height: 1.2em;
   }
 }
-/* line 332, ../scss/style.scss */
+/* line 351, ../scss/style.scss */
 section.valeur:after {
   color: rgba(255, 255, 255, 0.4);
   position: absolute;
@@ -1042,7 +1066,7 @@ section.valeur:after {
   z--index: -1;
 }
 @media only screen and (min-width: 960px) {
-  /* line 332, ../scss/style.scss */
+  /* line 351, ../scss/style.scss */
   section.valeur:after {
     font-size: 600px;
     font-size: 60rem;
@@ -1051,7 +1075,7 @@ section.valeur:after {
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 332, ../scss/style.scss */
+  /* line 351, ../scss/style.scss */
   section.valeur:after {
     font-size: 400px;
     font-size: 40rem;
@@ -1060,42 +1084,49 @@ section.valeur:after {
   }
 }
 @media (max-width: 767px) {
-  /* line 332, ../scss/style.scss */
+  /* line 351, ../scss/style.scss */
   section.valeur:after {
     display: none;
   }
 }
 
-/* line 356, ../scss/style.scss */
+/* line 375, ../scss/style.scss */
 #home {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-image: url("../img/home.jpg");
   color: #3f5049;
 }
-/* line 360, ../scss/style.scss */
+/* line 383, ../scss/style.scss */
 #home h1 {
   margin-bottom: 0;
 }
 @media (max-width: 767px) {
-  /* line 360, ../scss/style.scss */
+  /* line 383, ../scss/style.scss */
   #home h1 {
     font-size: 25px;
     font-size: 2.5rem;
   }
 }
-/* line 367, ../scss/style.scss */
+/* line 390, ../scss/style.scss */
 #home h2 {
   font-weight: 400;
   margin-bottom: 50px;
 }
 @media (max-width: 767px) {
-  /* line 367, ../scss/style.scss */
+  /* line 390, ../scss/style.scss */
   #home h2 {
     font-size: 20px;
     font-size: 2rem;
     margin-bottom: 30px;
   }
 }
-/* line 376, ../scss/style.scss */
+/* line 399, ../scss/style.scss */
 #home strong {
   display: block;
   margin: auto;
@@ -1104,13 +1135,13 @@ section.valeur:after {
   font-size: 2.2rem;
 }
 @media (max-width: 767px) {
-  /* line 376, ../scss/style.scss */
+  /* line 399, ../scss/style.scss */
   #home strong {
     font-size: 18px;
     font-size: 1.8rem;
   }
 }
-/* line 387, ../scss/style.scss */
+/* line 410, ../scss/style.scss */
 #home a.download {
   display: block;
   text-align: center;
@@ -1157,78 +1188,101 @@ section.valeur:after {
   border-right-width: 0;
   border-left-width: 50px;
 }
-/* line 400, ../scss/style.scss */
+/* line 423, ../scss/style.scss */
 #home a.download:hover, #home a.download:focus {
   background: #485b53;
 }
 
-/* line 405, ../scss/style.scss */
+/* line 428, ../scss/style.scss */
 #pourquoi {
   background: #252525;
 }
-/* line 408, ../scss/style.scss */
+/* line 431, ../scss/style.scss */
 #pourquoi h1 span {
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 408, ../scss/style.scss */
+  /* line 431, ../scss/style.scss */
   #pourquoi h1 span {
     display: block;
   }
 }
 
-/* line 416, ../scss/style.scss */
+/* line 439, ../scss/style.scss */
 #entrepreneur {
   background: #cb3521;
   position: relative;
   overflow: hidden;
 }
-/* line 421, ../scss/style.scss */
+/* line 444, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap {
   background: #8e2011;
 }
-/* line 423, ../scss/style.scss */
+/* line 446, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:hover {
   background: #771b0e;
 }
-/* line 427, ../scss/style.scss */
+/* line 450, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:after {
   color: #cb3521;
 }
-/* line 432, ../scss/style.scss */
+/* line 455, ../scss/style.scss */
 #entrepreneur:after {
   content: "1";
 }
 
-/* line 437, ../scss/style.scss */
-#prop1-image {
+/* line 460, ../scss/style.scss */
+#prop1-image > div {
   background-image: url("../img/entrepreneuretudiant.jpg");
 }
 
-/* line 440, ../scss/style.scss */
+/* line 463, ../scss/style.scss */
 #prop1 {
   background: #cb3521;
 }
 
-/* line 444, ../scss/style.scss */
+/* line 467, ../scss/style.scss */
 #transversalite {
   background: #2145cb;
   position: relative;
   overflow: hidden;
 }
-/* line 449, ../scss/style.scss */
+/* line 472, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap {
   background: #1331a1;
 }
-/* line 451, ../scss/style.scss */
+/* line 474, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:hover {
   background: #102a8a;
 }
-/* line 455, ../scss/style.scss */
+/* line 478, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:after {
   color: #2145cb;
 }
-/* line 460, ../scss/style.scss */
+/* line 483, ../scss/style.scss */
 #transversalite:after {
   content: "2";
+}
+
+/* line 488, ../scss/style.scss */
+#ouverture {
+  background: #ce2c9a;
+  position: relative;
+  overflow: hidden;
+}
+/* line 493, ../scss/style.scss */
+#ouverture ul.prop-links div.wrap {
+  background: #8b1164;
+}
+/* line 495, ../scss/style.scss */
+#ouverture ul.prop-links div.wrap:hover {
+  background: #740e54;
+}
+/* line 499, ../scss/style.scss */
+#ouverture ul.prop-links div.wrap:after {
+  color: #ce2c9a;
+}
+/* line 504, ../scss/style.scss */
+#ouverture:after {
+  content: "3";
 }
