Effet de pliure sur le menu

--- a/css/style.css
+++ b/css/style.css
@@ -728,7 +728,7 @@ div.content {
 /* line 93, ../scss/style.scss */
 #menu-container a.menu-toggle {
   display: none;
-  padding: 10px;
+  padding: 15px 10px;
   text-decoration: none;
 }
 @media (max-width: 767px) {
@@ -738,22 +738,19 @@ div.content {
   }
 }
 
-/* line 102, ../scss/style.scss */
-#menu {
-  overflow: hidden;
-}
 @media (max-width: 767px) {
   /* line 102, ../scss/style.scss */
   #menu {
     max-height: 0em;
+    overflow: hidden;
   }
-  /* line 108, ../scss/style.scss */
+  /* line 107, ../scss/style.scss */
   #menu.active {
     max-height: 20em;
   }
 }
 
-/* line 113, ../scss/style.scss */
+/* line 112, ../scss/style.scss */
 #menu ul {
   display: table;
   margin: auto;
@@ -761,19 +758,19 @@ div.content {
   text-align: center;
 }
 @media only screen and (min-width: 960px) {
-  /* line 113, ../scss/style.scss */
+  /* line 112, ../scss/style.scss */
   #menu ul {
     width: 960px;
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 113, ../scss/style.scss */
+  /* line 112, ../scss/style.scss */
   #menu ul {
     width: 768px;
   }
 }
 @media (max-width: 767px) {
-  /* line 113, ../scss/style.scss */
+  /* line 112, ../scss/style.scss */
   #menu ul {
     display: block;
   }
@@ -792,12 +789,25 @@ div.content {
 }
 /* line 139, ../scss/style.scss */
 #menu li:hover a, #menu li a:focus, #menu li.active a {
-  background: #f4f4f4;
+  background: #efefef;
   color: #252525;
 }
+@media only screen and (min-width: 960px) {
+  /* line 145, ../scss/style.scss */
+  #menu li:hover a:before, #menu li:hover a:after, #menu li a:focus:before, #menu li a:focus:after, #menu li.active a:before, #menu li.active a:after {
+    display: block;
+  }
+}
+@media (min-width: 768px) and (max-width: 959px) {
+  /* line 151, ../scss/style.scss */
+  #menu li:hover a:before, #menu li:hover a:after, #menu li a:focus:before, #menu li a:focus:after, #menu li.active a:before, #menu li.active a:after {
+    display: block;
+  }
+}
 
-/* line 144, ../scss/style.scss */
+/* line 157, ../scss/style.scss */
 #menu a {
+  position: relative;
   display: block;
   text-decoration: none;
   font-weight: 700;
@@ -809,48 +819,72 @@ div.content {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
+/* line 168, ../scss/style.scss */
+#menu a:before {
+  content: "";
+  display: none;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  border-top: 10px solid #efefef;
+}
+/* line 177, ../scss/style.scss */
+#menu a:after {
+  content: "";
+  display: none;
+  position: absolute;
+  bottom: -10px;
+  right: -7px;
+  border: 0 solid #d5d5d5;
+  border-bottom-width: 10px;
+  border-left-width: 7px;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+}
 
-/* line 186, ../scss/style.scss */
+/* line 225, ../scss/style.scss */
 div.ribbon-wrapper {
   text-align: center;
 }
 
-/* line 191, ../scss/style.scss */
+/* line 230, ../scss/style.scss */
 section.slide {
   width: 100%;
   padding-top: 42px;
   padding-bottom: 20px;
 }
 @media only screen and (min-height: 700px) {
-  /* line 191, ../scss/style.scss */
+  /* line 230, ../scss/style.scss */
   section.slide {
     min-height: 700px;
   }
 }
 @media only screen and (min-height: 500px) and (max-height: 699px) {
-  /* line 191, ../scss/style.scss */
+  /* line 230, ../scss/style.scss */
   section.slide {
     min-height: 500px;
   }
 }
 @media only screen and (max-height: 499px) {
-  /* line 191, ../scss/style.scss */
+  /* line 230, ../scss/style.scss */
   section.slide {
     min-height: 300px;
   }
 }
 
-/* line 206, ../scss/style.scss */
+/* line 245, ../scss/style.scss */
 section.slide.image {
   position: relative;
 }
 @media (max-width: 767px) {
-  /* line 206, ../scss/style.scss */
+  /* line 245, ../scss/style.scss */
   section.slide.image {
     display: none;
   }
 }
-/* line 213, ../scss/style.scss */
+/* line 252, ../scss/style.scss */
 section.slide.image > div {
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -866,19 +900,19 @@ section.slide.image > div {
   left: 0;
 }
 
-/* line 225, ../scss/style.scss */
+/* line 264, ../scss/style.scss */
 section.slide div.slide-inner {
   margin: auto;
   padding-top: 40px;
 }
 @media only screen and (min-width: 960px) {
-  /* line 225, ../scss/style.scss */
+  /* line 264, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 960px;
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 225, ../scss/style.scss */
+  /* line 264, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -886,7 +920,7 @@ section.slide div.slide-inner {
   }
 }
 @media (max-width: 767px) {
-  /* line 225, ../scss/style.scss */
+  /* line 264, ../scss/style.scss */
   section.slide div.slide-inner {
     width: 100%;
     padding-left: 10px;
@@ -894,7 +928,7 @@ section.slide div.slide-inner {
   }
 }
 
-/* line 244, ../scss/style.scss */
+/* line 283, ../scss/style.scss */
 section.valeur h1 {
   font-size: 60px;
   font-size: 6rem;
@@ -902,7 +936,7 @@ section.valeur h1 {
   margin-bottom: 30px;
 }
 @media (max-width: 767px) {
-  /* line 244, ../scss/style.scss */
+  /* line 283, ../scss/style.scss */
   section.valeur h1 {
     font-size: 40px;
     font-size: 4rem;
@@ -910,12 +944,12 @@ section.valeur h1 {
   }
 }
 @media (max-width: 767px) {
-  /* line 256, ../scss/style.scss */
+  /* line 295, ../scss/style.scss */
   section.valeur h1 span {
     display: block;
   }
 }
-/* line 261, ../scss/style.scss */
+/* line 300, ../scss/style.scss */
 section.valeur blockquote {
   display: inline-block;
   position: relative;
@@ -928,7 +962,7 @@ section.valeur blockquote {
   color: #252525;
   text-align: center;
 }
-/* line 159, ../scss/style.scss */
+/* line 198, ../scss/style.scss */
 section.valeur blockquote:before, section.valeur blockquote:after {
   content: "";
   position: absolute;
@@ -937,7 +971,7 @@ section.valeur blockquote:before, section.valeur blockquote:after {
   border-top-width: 0;
   border-bottom-width: 15px;
 }
-/* line 167, ../scss/style.scss */
+/* line 206, ../scss/style.scss */
 section.valeur blockquote:before {
   left: 0;
   bottom: -15px;
@@ -947,7 +981,7 @@ section.valeur blockquote:before {
   border-left-width: 0;
   border-right-width: 50px;
 }
-/* line 176, ../scss/style.scss */
+/* line 215, ../scss/style.scss */
 section.valeur blockquote:after {
   right: 0;
   bottom: -15px;
@@ -958,12 +992,12 @@ section.valeur blockquote:after {
   border-left-width: 50px;
 }
 @media (max-width: 767px) {
-  /* line 261, ../scss/style.scss */
+  /* line 300, ../scss/style.scss */
   section.valeur blockquote {
     padding: 5px 7%;
   }
 }
-/* line 275, ../scss/style.scss */
+/* line 314, ../scss/style.scss */
 section.valeur cite {
   display: block;
   font-weight: 300;
@@ -972,14 +1006,14 @@ section.valeur cite {
   font-size: 1.8rem;
   text-align: right;
 }
-/* line 283, ../scss/style.scss */
+/* line 322, ../scss/style.scss */
 section.valeur ul.prop-links {
   margin: 50px auto 0;
   list-style: none;
   text-align: center;
   font-size: 0;
 }
-/* line 289, ../scss/style.scss */
+/* line 328, ../scss/style.scss */
 section.valeur ul.prop-links li {
   display: inline-block;
   width: 35%;
@@ -989,7 +1023,7 @@ section.valeur ul.prop-links li {
   line-height: 1;
 }
 @media (max-width: 767px) {
-  /* line 289, ../scss/style.scss */
+  /* line 328, ../scss/style.scss */
   section.valeur ul.prop-links li {
     display: block;
     width: 100%;
@@ -997,7 +1031,7 @@ section.valeur ul.prop-links li {
     margin-left: 0;
   }
 }
-/* line 304, ../scss/style.scss */
+/* line 343, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap {
   display: table;
   width: 100%;
@@ -1007,7 +1041,7 @@ section.valeur ul.prop-links div.wrap {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 310, ../scss/style.scss */
+/* line 349, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:after {
   content: attr(data-num);
   position: absolute;
@@ -1023,11 +1057,11 @@ section.valeur ul.prop-links div.wrap:after {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 321, ../scss/style.scss */
+/* line 360, ../scss/style.scss */
 section.valeur ul.prop-links div.wrap:hover:after {
   right: 5px;
 }
-/* line 325, ../scss/style.scss */
+/* line 364, ../scss/style.scss */
 section.valeur ul.prop-links a {
   position: relative;
   display: table-cell;
@@ -1044,20 +1078,20 @@ section.valeur ul.prop-links a {
   line-height: 1.3em;
   z-index: 10;
 }
-/* line 340, ../scss/style.scss */
+/* line 379, ../scss/style.scss */
 section.valeur ul.prop-links a.long {
   font-size: 18px;
   font-size: 1.8rem;
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 325, ../scss/style.scss */
+  /* line 364, ../scss/style.scss */
   section.valeur ul.prop-links a {
     font-size: 20px;
     font-size: 2rem;
     line-height: 1.2em;
   }
 }
-/* line 351, ../scss/style.scss */
+/* line 390, ../scss/style.scss */
 section.valeur:after {
   color: rgba(255, 255, 255, 0.4);
   position: absolute;
@@ -1066,7 +1100,7 @@ section.valeur:after {
   z--index: -1;
 }
 @media only screen and (min-width: 960px) {
-  /* line 351, ../scss/style.scss */
+  /* line 390, ../scss/style.scss */
   section.valeur:after {
     font-size: 600px;
     font-size: 60rem;
@@ -1075,7 +1109,7 @@ section.valeur:after {
   }
 }
 @media (min-width: 768px) and (max-width: 959px) {
-  /* line 351, ../scss/style.scss */
+  /* line 390, ../scss/style.scss */
   section.valeur:after {
     font-size: 400px;
     font-size: 40rem;
@@ -1084,13 +1118,13 @@ section.valeur:after {
   }
 }
 @media (max-width: 767px) {
-  /* line 351, ../scss/style.scss */
+  /* line 390, ../scss/style.scss */
   section.valeur:after {
     display: none;
   }
 }
 
-/* line 375, ../scss/style.scss */
+/* line 414, ../scss/style.scss */
 #home {
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1102,31 +1136,31 @@ section.valeur:after {
   background-image: url("../img/home.jpg");
   color: #3f5049;
 }
-/* line 383, ../scss/style.scss */
+/* line 422, ../scss/style.scss */
 #home h1 {
   margin-bottom: 0;
 }
 @media (max-width: 767px) {
-  /* line 383, ../scss/style.scss */
+  /* line 422, ../scss/style.scss */
   #home h1 {
     font-size: 25px;
     font-size: 2.5rem;
   }
 }
-/* line 390, ../scss/style.scss */
+/* line 429, ../scss/style.scss */
 #home h2 {
   font-weight: 400;
   margin-bottom: 50px;
 }
 @media (max-width: 767px) {
-  /* line 390, ../scss/style.scss */
+  /* line 429, ../scss/style.scss */
   #home h2 {
     font-size: 20px;
     font-size: 2rem;
     margin-bottom: 30px;
   }
 }
-/* line 399, ../scss/style.scss */
+/* line 438, ../scss/style.scss */
 #home strong {
   display: block;
   margin: auto;
@@ -1135,13 +1169,13 @@ section.valeur:after {
   font-size: 2.2rem;
 }
 @media (max-width: 767px) {
-  /* line 399, ../scss/style.scss */
+  /* line 438, ../scss/style.scss */
   #home strong {
     font-size: 18px;
     font-size: 1.8rem;
   }
 }
-/* line 410, ../scss/style.scss */
+/* line 449, ../scss/style.scss */
 #home a.download {
   display: block;
   text-align: center;
@@ -1159,7 +1193,7 @@ section.valeur:after {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 159, ../scss/style.scss */
+/* line 198, ../scss/style.scss */
 #home a.download:before, #home a.download:after {
   content: "";
   position: absolute;
@@ -1168,7 +1202,7 @@ section.valeur:after {
   border-top-width: 0;
   border-bottom-width: 15px;
 }
-/* line 167, ../scss/style.scss */
+/* line 206, ../scss/style.scss */
 #home a.download:before {
   left: 0;
   bottom: -15px;
@@ -1178,7 +1212,7 @@ section.valeur:after {
   border-left-width: 0;
   border-right-width: 50px;
 }
-/* line 176, ../scss/style.scss */
+/* line 215, ../scss/style.scss */
 #home a.download:after {
   right: 0;
   bottom: -15px;
@@ -1188,101 +1222,101 @@ section.valeur:after {
   border-right-width: 0;
   border-left-width: 50px;
 }
-/* line 423, ../scss/style.scss */
+/* line 462, ../scss/style.scss */
 #home a.download:hover, #home a.download:focus {
   background: #485b53;
 }
 
-/* line 428, ../scss/style.scss */
+/* line 467, ../scss/style.scss */
 #pourquoi {
   background: #252525;
 }
-/* line 431, ../scss/style.scss */
+/* line 470, ../scss/style.scss */
 #pourquoi h1 span {
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 431, ../scss/style.scss */
+  /* line 470, ../scss/style.scss */
   #pourquoi h1 span {
     display: block;
   }
 }
 
-/* line 439, ../scss/style.scss */
+/* line 478, ../scss/style.scss */
 #entrepreneur {
   background: #cb3521;
   position: relative;
   overflow: hidden;
 }
-/* line 444, ../scss/style.scss */
+/* line 483, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap {
   background: #8e2011;
 }
-/* line 446, ../scss/style.scss */
+/* line 485, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:hover {
   background: #771b0e;
 }
-/* line 450, ../scss/style.scss */
+/* line 489, ../scss/style.scss */
 #entrepreneur ul.prop-links div.wrap:after {
   color: #cb3521;
 }
-/* line 455, ../scss/style.scss */
+/* line 494, ../scss/style.scss */
 #entrepreneur:after {
   content: "1";
 }
 
-/* line 460, ../scss/style.scss */
+/* line 499, ../scss/style.scss */
 #prop1-image > div {
   background-image: url("../img/entrepreneuretudiant.jpg");
 }
 
-/* line 463, ../scss/style.scss */
+/* line 502, ../scss/style.scss */
 #prop1 {
   background: #cb3521;
 }
 
-/* line 467, ../scss/style.scss */
+/* line 506, ../scss/style.scss */
 #transversalite {
   background: #2145cb;
   position: relative;
   overflow: hidden;
 }
-/* line 472, ../scss/style.scss */
+/* line 511, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap {
   background: #1331a1;
 }
-/* line 474, ../scss/style.scss */
+/* line 513, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:hover {
   background: #102a8a;
 }
-/* line 478, ../scss/style.scss */
+/* line 517, ../scss/style.scss */
 #transversalite ul.prop-links div.wrap:after {
   color: #2145cb;
 }
-/* line 483, ../scss/style.scss */
+/* line 522, ../scss/style.scss */
 #transversalite:after {
   content: "2";
 }
 
-/* line 488, ../scss/style.scss */
+/* line 527, ../scss/style.scss */
 #ouverture {
   background: #ce2c9a;
   position: relative;
   overflow: hidden;
 }
-/* line 493, ../scss/style.scss */
+/* line 532, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap {
   background: #8b1164;
 }
-/* line 495, ../scss/style.scss */
+/* line 534, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap:hover {
   background: #740e54;
 }
-/* line 499, ../scss/style.scss */
+/* line 538, ../scss/style.scss */
 #ouverture ul.prop-links div.wrap:after {
   color: #ce2c9a;
 }
-/* line 504, ../scss/style.scss */
+/* line 543, ../scss/style.scss */
 #ouverture:after {
   content: "3";
 }
